--- a/app/bower.json
+++ b/app/bower.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "angular-material": "~0.6.1",
-    "angular-ui-router": "~0.2.13"
+    "angular-ui-router": "~0.2.13",
+    "bootstrap": "~3.3.1"
   }
 }
